file(GLOB_RECURES SRC_FILES CMAKE_CONFIGURE_DEPENDS CMAKE_CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
)

SET(OUTPUT_NAME
    "simple_sqlite-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out"
)

add_executable(${OUTPUT_NAME} ${SOURCES})

target_include_directories(
    ${PROJECT_NAME}
    PUBLIC_HEADER
    ${CMAKE_SOURCE_DIR}/include
)